@@ -35,6 +35,7 @@ typedef enum
     MACHINE_MACBOOKPRO_3,
     MACHINE_MACBOOK_1,
     MACHINE_MACBOOK_2,
+    MACHINE_MACBOOK_3,
 #else
     MACHINE_POWERBOOK_32,
     MACHINE_POWERBOOK_33,
